# lite-server

./: .env  .gitignore  Cargo.toml  README.md  designations.db  docker-compose.yml
src/: main.rs
src/services/: connection.rs  mod.rs
src/structs/: mod.rs  presentation.rs  publisher.rs  request_data.rs
