[package]
name = "server_lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
rusqlite = "0.29.0"
rand = "0.8"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0" 
serde_derive = "1.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"